--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0"
   }
 }
